semicolon/styles/main.css
#sketch {
    left: 0px;
    top: 65px;
    position: fixed;
    z-index: 0;
    opacity: 1;
    display: inline;
}

#settings {
    font-family: Helvetica;
    font-size: 18px;
    top: 57px;
    position: fixed;
    width: 100%;
    height: 100%;
    text-color: white;
    z-index: 2;
    color: white;
    margin-left: -8px;
    padding-right: 16px;
    display: none;
    background-color: rgba(52, 142, 151, 0.95);
}

#picker {
    top: 57px;
    position: absolute;
    z-index: 2;
    width: 95%;
    margin-left: -8px;
    padding-right: 16px;
    background-color: rgba(52, 142, 151, 0.95);
}

#sketchBrowser {
    font-family: Helvetica;
    font-size: 18px;
    top: 57px;
    position: fixed;
    width: 100%;
    height: 100%;
    text-color: white;
    z-index: 2;
    color: white;
    margin-left: -8px;
    padding-right: 16px;
    display: none;
    background-color: rgba(52, 142, 151, 0.95);
}

#sketchList {
    margin-top: 8px;
}

#sketchList li {
    list-style-type: none;
    height: 40px;
    margin-left: -40px;
}

#listText {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    width: 75%;
    background: transparent;
    line-height: 215%;
    margin-left: 9px;
    text-align: left;
    position: absolute;
}

#deleteButton {
    position: absolute;
    width: 10%;
    line-height: 215%;
    left: 78%;
    width: 20px;
}

#renameButton {
    position: absolute;
    width: 10%;
    line-height: 215%;
    left: 87%;
    width: 20px;
}

#sketchList li a {
    padding-left:10px;
}

#sketchList :nth-child(odd) {
    background-color: rgba(255, 255, 255, 0.25);
}

#sketchList :nth-child(even) {
    background-color: rgba(52, 142, 151, 0.95);
}


body {
    overflow: hidden;
}
.CodeMirror {
    font-family: 'Inconsolata';
    top: 57px;
    height: 100%;
    width: 100%;
    z-index: 1;
    opacity: 1;
    display: block;
    font-size: 18px;
    text-shadow: 0px 1px 2px #000;
    background: rgba(0, 0, 0, 0.4);
    font-weight: 700;
    margin-left: -8px;
    padding-right: 16px;
    display: block;
}
#TopBar {
    position: fixed;
    height: 70px;
    width: 200%;
    left: -5px;
    top: -5px;
    z-index: 6;
}

#BottomBar {
    position: fixed;
    display: none;
    height: 50px;
    width: 200%;
    left: -5px;
    bottom: 0px;
}

#sketchName {
    text-align: center;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    width: 35%;
    font-family: Helvetica;
    font-size: 12pt;
    color: white;
    z-index: 6;
    position: fixed;
    top: 30px;
    left: 37%;
}

#colorPicker {
    font-family: Helvetica;
    font-size: 12pt;
    color: white;
    z-index: 6;
    position: fixed;
    top: 30px;
    left: 87px;
}

#toggleSketch {
    font-family: Helvetica;
    font-size: 12pt;
    color: white;
    z-index: 6;
    position: fixed;
    top: 30px;
    right: 10px;
}

#settingsButton {
    font-family: Helvetica;
    font-size: 12pt;
    color: white;
    z-index: 6;
    position: fixed;
    top: 30px;
    left: 10px;
}

.r, .d {
    width: 24px;
    margin-top: 7px;
    background-color: initial !important;
}

#s, #t, #plus, #minus {
    width: 25px;
    background-color: initial !important;
}

.fontButton {
    font-size: 20px;
    color: white;
    margin-top: 20px;
    margin-left: 20px;
    width: 80px;
    height: 80px;
    border-radius: 5px;
}

